fix(config): config files are now under `config/` by default, to allow mapping of a docker volume

--- a/docs/content/how-to-guides/connections/manage-database-connection.mdx
+++ b/docs/content/how-to-guides/connections/manage-database-connection.mdx
@@ -76,7 +76,7 @@ See <Link to='/how-to-guides/auth/manage-user-permissions'>this guide</Link> for
 ## Using a configuration file
 All the connections configured for Vyne are stored in a config file - including any that you configure through the UI
 
-By default, this file is called `connections.conf`, and lives in the same directory as you launch Vyne from.
+By default, this file is called `connections.conf`, and lives in the `conf/` directory under where launch Vyne from.
 If this file doesn't exist when Vyne is launched, it's created the first time a connection is created via the UI.
 
 You can specify the name of the configuration file when launching Vyne, by setting the parameter `vyne.connections.config-file`.
