--- a/docs/content/querying-with-vyne/authentication-to-services.mdx
+++ b/docs/content/querying-with-vyne/authentication-to-services.mdx
@@ -10,7 +10,7 @@ Configuration is either through the UI, or by a file stored on the Vyne server.
 ## File based configuration
 Vyne will read / write authentication settings from a file on the vyne server.
 
-The location of the file is configurable by setting `vyne.auth.config-file` setting, and defaults to `./auth.conf`.
+The location of the file is configurable by setting `vyne.auth.config-file` setting, and defaults to `config/auth.conf`.
 
 Vyne uses a [HOCON](https://github.com/lightbend/config#examples-of-hocon) format for it's config files.  (HOCON is a superset of JSON, so JSON is also valid.)
 
