--- a/docs/content/tutorials/api-db-integration/rest-db-integration.mdx
+++ b/docs/content/tutorials/api-db-integration/rest-db-integration.mdx
@@ -4,7 +4,7 @@ description: Deploy Vyne locally, then integrate a database, a REST API, and Kaf
 ---
 
 import {Callout} from '../../components/callout';
-
+import { Link } from "gatsby"
 
 ## Overview
 In this tutorial, we'll set up a local instance of Vyne, and then see how to use Vyne
@@ -534,7 +534,7 @@ curl --location --request POST 'http://localhost:9091/kafka/newReleases/23'
 This will send a new release Protobuf message onto our Kafka topic - and you should see
 the details of the message appear in your query panel.
 
-SCREENSHOT HERE
+![](./streaming-query-simple.png)
 
 Now, let's enrich our Kafka stream with data from our other sources.
 
@@ -558,19 +558,30 @@ curl --location --request POST 'http://localhost:9091/kafka/newReleases/3'
 
 In the results panel, you should see the following:
 
+![](./streaming-data.png)
+
 ### What just happened?
  * Vyne read our protobuf message from the Kafka topic
  * Enriched it with data from a Database query
  * Then fleshed it out some more information from a REST API call
  * And served it up in our UI.
 
-
-
 ## What's next?
 In this tutorial, we've set up Vyne, and used it to automatically integrate data from a Postgres Database and a REST API.
 
+### Look under the hood
+In order to get a better understanding of what's happened under the hood, take a look at some of the files that Vyne
+has generated during this tutorial.
+
+| Directory                                 | What's there?                                                                                                                         |
+|-------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------|
+| `./vyne/schema-server/schema-server.conf` | The config file that's driving the Schema server.  It defines where to read and write the schema files Vyne created in the background |
+| `./vyne/schema-server/projects`           | The schema project that Vyne was writing schemas to                                                                                   |
+| `./vyne/config/connections.conf`          | A connections file defining the api connections you imported in the UI                                                                |
+
+### Other tutorials
 There's lots of things left to explore - a few great next tutorials are:
 
  * See how Vyne performs multi-hop data resolutions
- * Connect and query a Kafka streaming datasource
- * Push schemas to Vyne automatically
+ * <Link to="/reference/schema-server/schema-server/">Understand the difference between "pushing" and "pulling" schemas in Vyne</Link>
+ * <Link to="/reference/schema-server/schema-server/#publishing-external-schemas">Push schemas to Vyne automatically</Link>
