--- a/docs/content/tutorials/api-db-integration/rest-db-integration.mdx
+++ b/docs/content/tutorials/api-db-integration/rest-db-integration.mdx
@@ -227,7 +227,7 @@ A preview of the imported schema is once again displayed.
 
 This time, we do need to modify some default values.
 
-Click on Services -> `getStreamingProvidersForFilmUsingGET`.
+Click on Services → `getStreamingProvidersForFilmUsingGET`.
 
 This shows the API operation that's exposed in the swagger spec we just imported.
 This API accepts the id of a Film, and returns information about the streaming services that have the film available to watch.
@@ -462,7 +462,7 @@ You should see a preview of a newly created a model: `NewFilmReleaseAnnouncement
 
 We need to indicate that the filmId property is the same as the FilmId used elsewhere in our company.
 
- * On the left-hand table, click Models -> NewFilmReleaseAnnouncement
+ * On the left-hand table, click Models → NewFilmReleaseAnnouncement
  * The NewFilmReleaseAnnouncement data model is displayed
  * In the "Attributes" table, click on the underlined `Integer` type next to filmId
  * Search for the type FilmId, and select `film.types.FilmId` from the search box
@@ -504,7 +504,7 @@ Fill out the rest of the form with the following details:
 
 A preview of the schema is shown.
 
-By clicking Services -> MyKafkaService -> consumeFromReleases, you can see
+By clicking Services → MyKafkaService → consumeFromReleases, you can see
 a new operation has been created which returns a `Stream<NewFilmReleaseAnnouncement>`.
 
 Streams are a different type of operation - rather than request / response like an HTTP operation exposes, these
