added tutorial link to front page

--- a/docs/content/index.mdx
+++ b/docs/content/index.mdx
@@ -4,6 +4,7 @@ description: Automated data discovery and integration
 ---
 
 import { Hint } from './components/hint'
+import { Link } from "gatsby"
 
 # Welcome
 
@@ -25,3 +26,9 @@ Get vyne running quickly:
 docker run -p 9022:9022 vyneco/vyne
 ```
 
+## Take a tutorial
+
+ * Follow our <Link to='/tutorials/api-db-integration/rest-db-integration/'>First Integration tutorial</Link> to quickly get up & running with Vyne.
+
+## Connect with us
+Reach out to us on the [Vyne Slack Channel](https://join.slack.com/t/vyne-dev/shared_invite/zt-697laanr-DHGXXak5slqsY9DqwrkzHg) to say hello, and connect with the Vyne dev team and community.
